# 3g4-2

./: CMakeLists.txt  CMakePresets.json  README.md  run_cmake.sh
isosurf/Debugx64/: isosurfx64d.lib
isosurf/Releasex64/: isosurfx64.lib
src/: 3g4-lab.exe.manifest  3g4_lab_app.cpp  3g4_lab_app.h  CocoaSurface.h  CocoaSurface.mm  VulkanCanvas.cpp  VulkanCanvas.h  VulkanException.cpp  VulkanException.h  VulkanWindow.cpp  VulkanWindow.h  exercises.cpp  gouraud.frag  gouraud.vert  guistructs.h  isosurf.h  linear_interp.cpp  linear_interp.h  outline.frag  outline.vert  phong.frag  phong.vert  reflect.frag  reflect.vert  refract.frag  shader.frag  shader.vert  skybox.frag  skybox.vert  wireframe.frag  wireframe.vert  wxWayland.h
